GPencil Time Offset Modifier together with Armature Modifier or/and Lattice Modifier broken in 2.93.3 #91060

Closed
opened 2021-08-30 23:25:49 +02:00 by Dmitry · 11 comments

System Information
Operating system: Win10

Blender Version
Broken: 2.93.3
Worked: 2.92
Caused by f3bf87e588

Short description of error
GPencil Time Offset Modifier buggs Armature or/and Lattice modifier if applied together to the GPencil Object.

Exact steps for others to reproduce the error

  • Open fresh 2D Animation Template (File -> New -> 2D Animation).
  • Go to Frame number 5.
  • Write big number "5" in the middle of screen.
  • Delete empty GPencil Frames at Frame number 1.
  • Switch to Object Mode.
  • Add Armature.
  • Select GPencil Object.
  • Add Time Offset Modifier to GP Object (set Mode = Fixed Frame; set Frame = 5).
  • Add Armature Modifier to GP Object (set Object = Armature, set Bind To = Bone Envelopes).
  • Select any Frame before number 5 (for example Frame 2)
  • Select Armature.
  • Switch to Pose Mode.
  • Rotate Bone and notice how weird GPencil drawing reacts.

Fixes if you use Show Overlays on/off command.
Works as expected if Frame >= 5.


or to reproduce from file

  • Open .blend file
  • Use {key R} to rotate bone

GP_TimeOffset_Armature.blend

**System Information** Operating system: Win10 **Blender Version** Broken: 2.93.3 Worked: 2.92 Caused by f3bf87e588 **Short description of error** GPencil Time Offset Modifier buggs Armature or/and Lattice modifier if applied together to the GPencil Object. **Exact steps for others to reproduce the error** - Open fresh 2D Animation Template (File -> New -> 2D Animation). - Go to Frame number 5. - Write big number "5" in the middle of screen. - Delete empty GPencil Frames at Frame number 1. - Switch to Object Mode. - Add Armature. - Select GPencil Object. - Add Time Offset Modifier to GP Object (set Mode = Fixed Frame; set Frame = 5). - Add Armature Modifier to GP Object (set Object = Armature, set Bind To = Bone Envelopes). - Select any Frame before number 5 (for example Frame 2) - Select Armature. - Switch to Pose Mode. - Rotate Bone and notice how weird GPencil drawing reacts. Fixes if you use Show Overlays on/off command. Works as expected if Frame >= 5. --- or to reproduce from file - Open .blend file - Use {key R} to rotate bone [GP_TimeOffset_Armature.blend](https://archive.blender.org/developer/F10353721/GP_TimeOffset_Armature.blend)
Author

Added subscriber: @ostrijper4ik

Added subscriber: @ostrijper4ik
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

May similar to #89433 (GP: Time offset and Armature modifier causes glitches) ?

May similar to #89433 (GP: Time offset and Armature modifier causes glitches) ?

Added subscribers: @lichtwerk, @antoniov

Added subscribers: @lichtwerk, @antoniov

I have been looking at the modifier code and the Frame (gpf) variable is correct in both cases. It looks in some place the calculation of the deformation is using the current frame number. The defomration is done reusing the mesh deform functions (armature_vert_task_with_dvert).

@lichtwerk do you know this deformation code?

I have been looking at the modifier code and the Frame (`gpf`) variable is correct in both cases. It looks in some place the calculation of the deformation is using the current frame number. The defomration is done reusing the mesh deform functions (`armature_vert_task_with_dvert`). @lichtwerk do you know this deformation code?

I think I have seen something...checking.

I think I have seen something...checking.
Philipp Oeser self-assigned this 2021-08-31 10:59:08 +02:00
Member

Will check.

Will check.

This issue was referenced by f0b3b6710c

This issue was referenced by f0b3b6710c6ae66121deb6d8fd5ee95194b1a643

This issue was referenced by af7233368d

This issue was referenced by af7233368de4eee5b7f0e34b0ff77436d4f9b312
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91060
No description provided.